[gd_scene load_steps=45 format=2]

[ext_resource path="res://game/unit/legion/legion.gd" type="Script" id=1]
[ext_resource path="res://game/unit/legion/roid.png" type="Texture" id=2]
[ext_resource path="res://game/unit/legion/roid_normal.png" type="Texture" id=3]
[ext_resource path="res://game/unit/legion/shoulder.png" type="Texture" id=4]
[ext_resource path="res://game/unit/legion/shoulder_normal.png" type="Texture" id=5]
[ext_resource path="res://game/unit/legion/arm.png" type="Texture" id=6]
[ext_resource path="res://game/unit/legion/arm_normal.png" type="Texture" id=7]
[ext_resource path="res://game/vfx/bullet_shell.png" type="Texture" id=8]
[ext_resource path="res://game/unit/light_material.tres" type="Material" id=9]
[ext_resource path="res://game/vfx/sphere.png" type="Texture" id=10]
[ext_resource path="res://game/vfx/explosion_1.png" type="Texture" id=11]
[ext_resource path="res://game/vfx/thrust.png" type="Texture" id=12]
[ext_resource path="res://game/vfx/thrust_2.png" type="Texture" id=13]
[ext_resource path="res://game/unit/legion/head.png" type="Texture" id=14]
[ext_resource path="res://game/unit/legion/head_normal.png" type="Texture" id=15]
[ext_resource path="res://game/unit/legion/cockpit.png" type="Texture" id=16]
[ext_resource path="res://game/unit/legion/cockpit_normal.png" type="Texture" id=17]
[ext_resource path="res://game/unit/legion/leg.png" type="Texture" id=18]
[ext_resource path="res://game/unit/legion/leg_normal.png" type="Texture" id=19]
[ext_resource path="res://game/vfx/explosion_2.png" type="Texture" id=20]
[ext_resource path="res://game/vfx/unit_explosion_8.png" type="Texture" id=21]
[ext_resource path="res://game/vfx/unit_explosion_7.png" type="Texture" id=22]
[ext_resource path="res://game/vfx/unit_explosion_6.png" type="Texture" id=23]
[ext_resource path="res://game/vfx/unit_explosion_5.png" type="Texture" id=24]
[ext_resource path="res://game/vfx/unit_explosion_4.png" type="Texture" id=25]
[ext_resource path="res://game/vfx/unit_explosion_3.png" type="Texture" id=26]
[ext_resource path="res://game/vfx/unit_explosion_2.png" type="Texture" id=27]
[ext_resource path="res://game/vfx/unit_explosion_1.png" type="Texture" id=28]
[ext_resource path="res://game/unit/legion/explosion.tres" type="Animation" id=29]
[ext_resource path="res://game/vfx/hit_effect.tscn" type="PackedScene" id=30]
[ext_resource path="res://game/unit/legion/attack_1.tres" type="Animation" id=31]
[ext_resource path="res://game/unit/legion/attack_2.tres" type="Animation" id=32]
[ext_resource path="res://game/unit/legion/destroy.tres" type="Animation" id=33]
[ext_resource path="res://game/unit/legion/idle.tres" type="Animation" id=34]
[ext_resource path="res://game/unit/legion/show.tres" type="Animation" id=35]
[ext_resource path="res://game/unit/legion/skill.tres" type="Animation" id=36]
[ext_resource path="res://game/unit/legion/legion_atk.wav" type="AudioStream" id=37]
[ext_resource path="res://game/sfx/explosion_knight.wav" type="AudioStream" id=38]
[ext_resource path="res://game/unit/legion/legion_skill.wav" type="AudioStream" id=39]
[ext_resource path="res://game/hpbar/hpbar_l.tscn" type="PackedScene" id=40]
[ext_resource path="res://game/unit/legion/bomb_explosion.tscn" type="PackedScene" id=41]
[ext_resource path="res://game/unit/legion/bullet.tscn" type="PackedScene" id=42]

[sub_resource type="Curve" id=1]

min_value = 0.0
max_value = 1.0
bake_resolution = 100
_data = [ Vector2( 0, 0.997113 ), 0.0, -1.25164, 0, 0, Vector2( 1, 0.381304 ), -1.84297, 0.0, 0, 0 ]

[sub_resource type="SpriteFrames" id=2]

animations = [ {
"frames": [ ExtResource( 12 ), ExtResource( 13 ) ],
"loop": true,
"name": "thrust",
"speed": 5.0
} ]

[node name="Legion" type="Node2D"]
script = ExtResource( 1 )

[node name="Rotatable" type="Node2D" parent="."]
use_parent_material = true

[node name="Body" type="Sprite" parent="Rotatable"]
editor/display_folded = true
use_parent_material = true
position = Vector2( 0, 7 )
texture = ExtResource( 2 )
normal_map = ExtResource( 3 )

[node name="ShoulderL" type="Sprite" parent="Rotatable/Body"]
use_parent_material = true
position = Vector2( -33.5, 0 )
texture = ExtResource( 4 )
normal_map = ExtResource( 5 )
flip_h = true

[node name="ArmL" type="Sprite" parent="Rotatable/Body/ShoulderL"]
show_behind_parent = true
use_parent_material = true
position = Vector2( -20, 0 )
texture = ExtResource( 6 )
normal_map = ExtResource( 7 )
flip_h = true

[node name="CartridgeL" type="Position2D" parent="Rotatable/Body/ShoulderL/ArmL"]
position = Vector2( -10.5, 12 )

[node name="EjectionL" type="CPUParticles2D" parent="Rotatable/Body/ShoulderL/ArmL/CartridgeL"]
position = Vector2( 0.499996, -2 )
rotation = 1.49012e-008
emitting = false
amount = 1
lifetime = 1.0
one_shot = false
preprocess = 0.0
speed_scale = 4.0
explosiveness = 0.0
randomness = 0.0
fixed_fps = 0
fract_delta = true
local_coords = true
draw_order = 0
texture = ExtResource( 8 )
normalmap = null
emission_shape = 1
emission_sphere_radius = 1.0
emission_points = PoolVector2Array(  )
emission_colors = PoolColorArray(  )
flag_align_y = false
spread = 45.0
flatness = 0.0
gravity = Vector2( -200, 0 )
initial_velocity = 0.0
initial_velocity_random = 0.0
angular_velocity = 60.0
angular_velocity_random = 1.0
angular_velocity_curve = null
linear_accel = 0.0
linear_accel_random = 0.0
linear_accel_curve = null
radial_accel = 30.0
radial_accel_random = 1.0
radial_accel_curve = null
tangential_accel = 0.0
tangential_accel_random = 0.0
tangential_accel_curve = null
damping = 0.0
damping_random = 0.0
damping_curve = null
angle = 30.0
angle_random = 1.0
angle_curve = null
scale_amount = 0.4
scale_amount_random = 0.0
scale_amount_curve = null
color = Color( 0.501961, 0.337255, 0.141176, 0.870588 )
color_ramp = null
hue_variation = 0.0
hue_variation_random = 0.0
hue_variation_curve = null
anim_speed = 0.0
anim_speed_random = 0.0
anim_speed_curve = null
anim_offset = 0.0
anim_offset_random = 0.0
anim_offset_curve = null
anim_loop = false

[node name="LightCL" type="Sprite" parent="Rotatable/Body/ShoulderL/ArmL/CartridgeL"]
visible = false
modulate = Color( 1, 0.623529, 0.290196, 1 )
material = ExtResource( 9 )
position = Vector2( 4, 0 )
scale = Vector2( 0.6, 1 )
texture = ExtResource( 10 )

[node name="ShotpointL" type="Position2D" parent="Rotatable/Body/ShoulderL/ArmL"]
position = Vector2( 5.5, -70 )

[node name="Muzzleflash" type="Node2D" parent="Rotatable/Body/ShoulderL/ArmL/ShotpointL"]
scale = Vector2( 0.7, 1 )

[node name="MuzzleflashL" type="CPUParticles2D" parent="Rotatable/Body/ShoulderL/ArmL/ShotpointL/Muzzleflash"]
emitting = false
amount = 8
lifetime = 0.4
one_shot = true
preprocess = 0.0
speed_scale = 2.0
explosiveness = 0.0
randomness = 0.0
fixed_fps = 0
fract_delta = true
local_coords = true
draw_order = 0
texture = ExtResource( 11 )
normalmap = null
emission_shape = 0
emission_points = PoolVector2Array(  )
emission_colors = PoolColorArray(  )
flag_align_y = false
spread = 0.0
flatness = 0.0
gravity = Vector2( 0, -300 )
initial_velocity = 1.0
initial_velocity_random = 0.0
angular_velocity = 180.0
angular_velocity_random = 1.0
angular_velocity_curve = null
linear_accel = 0.0
linear_accel_random = 0.0
linear_accel_curve = null
radial_accel = 0.0
radial_accel_random = 0.0
radial_accel_curve = null
tangential_accel = 0.0
tangential_accel_random = 0.0
tangential_accel_curve = null
damping = 0.0
damping_random = 0.0
damping_curve = null
angle = 60.0
angle_random = 1.0
angle_curve = null
scale_amount = 1.0
scale_amount_random = 0.0
scale_amount_curve = SubResource( 1 )
color = Color( 0.117647, 0.835294, 0.447059, 0.635294 )
color_ramp = null
hue_variation = 0.0
hue_variation_random = 0.0
hue_variation_curve = null
anim_speed = 0.0
anim_speed_random = 0.0
anim_speed_curve = null
anim_offset = 0.0
anim_offset_random = 0.0
anim_offset_curve = null
anim_loop = false

[node name="LightSL" type="Sprite" parent="Rotatable/Body/ShoulderL/ArmL/ShotpointL"]
visible = false
modulate = Color( 0.87451, 1, 0.00392157, 1 )
material = ExtResource( 9 )
position = Vector2( 0, 14 )
scale = Vector2( 1.8, 2.8 )
texture = ExtResource( 10 )

[node name="BoosterpointL" type="Position2D" parent="Rotatable/Body/ShoulderL/ArmL"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 0, 40 )

[node name="ThrustL" type="AnimatedSprite" parent="Rotatable/Body/ShoulderL/ArmL/BoosterpointL"]
visible = false
modulate = Color( 0.133333, 0.207843, 1, 1 )
material = ExtResource( 9 )
position = Vector2( 0, 12 )
scale = Vector2( 0.6, 1 )
frames = SubResource( 2 )
animation = "thrust"
frame = 1
speed_scale = 3.0
playing = true
offset = Vector2( 0, 15 )

[node name="LightL" type="Sprite" parent="Rotatable/Body/ShoulderL/ArmL/BoosterpointL"]
visible = false
modulate = Color( 0.67451, 0.678431, 0.709804, 1 )
material = ExtResource( 9 )
position = Vector2( 0, 2 )
scale = Vector2( 0.6, 2.5 )
texture = ExtResource( 10 )

[node name="ShoulderR" type="Sprite" parent="Rotatable/Body"]
use_parent_material = true
position = Vector2( 33.5, 0 )
texture = ExtResource( 4 )
normal_map = ExtResource( 5 )

[node name="ArmR" type="Sprite" parent="Rotatable/Body/ShoulderR"]
show_behind_parent = true
use_parent_material = true
position = Vector2( 20, 0 )
texture = ExtResource( 6 )
normal_map = ExtResource( 7 )

[node name="CartridgeR" type="Position2D" parent="Rotatable/Body/ShoulderR/ArmR"]
position = Vector2( 10.5, 12 )

[node name="EjectionR" type="CPUParticles2D" parent="Rotatable/Body/ShoulderR/ArmR/CartridgeR"]
position = Vector2( -0.5, -2 )
rotation = 1.30385e-008
emitting = false
amount = 1
lifetime = 1.0
one_shot = false
preprocess = 0.0
speed_scale = 4.0
explosiveness = 0.0
randomness = 0.0
fixed_fps = 0
fract_delta = true
local_coords = true
draw_order = 0
texture = ExtResource( 8 )
normalmap = null
emission_shape = 1
emission_sphere_radius = 1.0
emission_points = PoolVector2Array(  )
emission_colors = PoolColorArray(  )
flag_align_y = false
spread = 45.0
flatness = 0.0
gravity = Vector2( 200, 0 )
initial_velocity = 0.0
initial_velocity_random = 0.0
angular_velocity = 60.0
angular_velocity_random = 1.0
angular_velocity_curve = null
linear_accel = 0.0
linear_accel_random = 0.0
linear_accel_curve = null
radial_accel = 30.0
radial_accel_random = 1.0
radial_accel_curve = null
tangential_accel = 0.0
tangential_accel_random = 0.0
tangential_accel_curve = null
damping = 0.0
damping_random = 0.0
damping_curve = null
angle = 30.0
angle_random = 1.0
angle_curve = null
scale_amount = 0.4
scale_amount_random = 0.0
scale_amount_curve = null
color = Color( 0.501961, 0.337255, 0.141176, 0.870588 )
color_ramp = null
hue_variation = 0.0
hue_variation_random = 0.0
hue_variation_curve = null
anim_speed = 0.0
anim_speed_random = 0.0
anim_speed_curve = null
anim_offset = 0.0
anim_offset_random = 0.0
anim_offset_curve = null
anim_loop = false

[node name="LightCR" type="Sprite" parent="Rotatable/Body/ShoulderR/ArmR/CartridgeR"]
visible = false
modulate = Color( 1, 0.623529, 0.290196, 1 )
material = ExtResource( 9 )
position = Vector2( -4, 4.76837e-007 )
scale = Vector2( 0.6, 1 )
texture = ExtResource( 10 )

[node name="ShotpointR" type="Position2D" parent="Rotatable/Body/ShoulderR/ArmR"]
position = Vector2( -5.5, -70 )

[node name="Muzzleflash" type="Node2D" parent="Rotatable/Body/ShoulderR/ArmR/ShotpointR"]
scale = Vector2( 0.7, 1 )

[node name="MuzzleflashR" type="CPUParticles2D" parent="Rotatable/Body/ShoulderR/ArmR/ShotpointR/Muzzleflash"]
emitting = false
amount = 8
lifetime = 0.4
one_shot = true
preprocess = 0.0
speed_scale = 2.0
explosiveness = 0.0
randomness = 0.0
fixed_fps = 0
fract_delta = true
local_coords = true
draw_order = 0
texture = ExtResource( 11 )
normalmap = null
emission_shape = 0
emission_points = PoolVector2Array(  )
emission_colors = PoolColorArray(  )
flag_align_y = false
spread = 0.0
flatness = 0.0
gravity = Vector2( 0, -300 )
initial_velocity = 1.0
initial_velocity_random = 0.0
angular_velocity = 180.0
angular_velocity_random = 1.0
angular_velocity_curve = null
linear_accel = 0.0
linear_accel_random = 0.0
linear_accel_curve = null
radial_accel = 0.0
radial_accel_random = 0.0
radial_accel_curve = null
tangential_accel = 0.0
tangential_accel_random = 0.0
tangential_accel_curve = null
damping = 0.0
damping_random = 0.0
damping_curve = null
angle = 60.0
angle_random = 1.0
angle_curve = null
scale_amount = 1.0
scale_amount_random = 0.0
scale_amount_curve = SubResource( 1 )
color = Color( 0.117647, 0.835294, 0.447059, 0.635294 )
color_ramp = null
hue_variation = 0.0
hue_variation_random = 0.0
hue_variation_curve = null
anim_speed = 0.0
anim_speed_random = 0.0
anim_speed_curve = null
anim_offset = 0.0
anim_offset_random = 0.0
anim_offset_curve = null
anim_loop = false

[node name="LightSR" type="Sprite" parent="Rotatable/Body/ShoulderR/ArmR/ShotpointR"]
visible = false
modulate = Color( 0.87451, 1, 0.00392157, 1 )
material = ExtResource( 9 )
position = Vector2( 0, 14 )
rotation = 4.13921e-009
scale = Vector2( 1.8, 2.8 )
texture = ExtResource( 10 )

[node name="BoosterpointR" type="Position2D" parent="Rotatable/Body/ShoulderR/ArmR"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 0, 40 )

[node name="ThrustR" type="AnimatedSprite" parent="Rotatable/Body/ShoulderR/ArmR/BoosterpointR"]
visible = false
modulate = Color( 0.133333, 0.207843, 1, 1 )
material = ExtResource( 9 )
position = Vector2( 0, 12 )
scale = Vector2( 0.6, 1 )
frames = SubResource( 2 )
animation = "thrust"
speed_scale = 3.0
playing = true
offset = Vector2( 0, 15 )

[node name="LightLR" type="Sprite" parent="Rotatable/Body/ShoulderR/ArmR/BoosterpointR"]
visible = false
modulate = Color( 0.67451, 0.678431, 0.709804, 1 )
material = ExtResource( 9 )
position = Vector2( 0, 2 )
scale = Vector2( 0.6, 2.5 )
texture = ExtResource( 10 )

[node name="Head" type="Sprite" parent="Rotatable/Body"]
use_parent_material = true
texture = ExtResource( 14 )
normal_map = ExtResource( 15 )

[node name="Cockpit" type="Sprite" parent="Rotatable/Body"]
show_behind_parent = true
use_parent_material = true
scale = Vector2( 1, 0.4 )
texture = ExtResource( 16 )
normal_map = ExtResource( 17 )

[node name="Leg" type="Sprite" parent="Rotatable/Body"]
show_behind_parent = true
use_parent_material = true
position = Vector2( 0, 5.5 )
texture = ExtResource( 18 )
normal_map = ExtResource( 19 )

[node name="Explosion" type="Node2D" parent="Rotatable"]
scale = Vector2( 2, 2 )

[node name="Main" type="Node2D" parent="Rotatable/Explosion"]
editor/display_folded = true

[node name="ExRing1" type="Sprite" parent="Rotatable/Explosion/Main"]
visible = false
modulate = Color( 1, 0.233246, 0.214844, 0 )
scale = Vector2( 4, 4 )
texture = ExtResource( 20 )

[node name="Ex8" type="Sprite" parent="Rotatable/Explosion/Main"]
visible = false
modulate = Color( 0, 0, 0, 1 )
rotation = -1.5708
texture = ExtResource( 21 )

[node name="Ex7" type="Sprite" parent="Rotatable/Explosion/Main"]
visible = false
modulate = Color( 0.154541, 0.166643, 0.1875, 1 )
texture = ExtResource( 22 )

[node name="Ex6" type="Sprite" parent="Rotatable/Explosion/Main"]
visible = false
modulate = Color( 0, 0.742188, 1, 0.160235 )
material = ExtResource( 9 )
scale = Vector2( 2, 2 )
texture = ExtResource( 23 )

[node name="Ex5" type="Sprite" parent="Rotatable/Explosion/Main"]
visible = false
modulate = Color( 0.241577, 0.109375, 1, 1 )
texture = ExtResource( 24 )

[node name="Ex4" type="Sprite" parent="Rotatable/Explosion/Main"]
visible = false
modulate = Color( 0.265625, 0.380371, 1, 1 )
scale = Vector2( 1.3, 1.3 )
texture = ExtResource( 25 )

[node name="Ex3" type="Sprite" parent="Rotatable/Explosion/Main"]
visible = false
modulate = Color( 0.40625, 0.666016, 1, 1 )
texture = ExtResource( 26 )

[node name="Ex2" type="Sprite" parent="Rotatable/Explosion/Main"]
visible = false
modulate = Color( 0.0351563, 0.819092, 1, 1 )
rotation = 3.14159
texture = ExtResource( 27 )

[node name="Ex1" type="Sprite" parent="Rotatable/Explosion/Main"]
visible = false
rotation = 1.5708
texture = ExtResource( 28 )

[node name="Ex1a" type="Sprite" parent="Rotatable/Explosion/Main"]
visible = false
texture = ExtResource( 28 )

[node name="Particle" type="CPUParticles2D" parent="Rotatable/Explosion/Main"]
emitting = false
amount = 35
lifetime = 1.0
one_shot = false
preprocess = 1.0
speed_scale = 0.8
explosiveness = 0.5
randomness = 0.0
fixed_fps = 0
fract_delta = true
local_coords = true
draw_order = 0
texture = null
normalmap = null
emission_shape = 1
emission_sphere_radius = 1.0
emission_points = PoolVector2Array(  )
emission_colors = PoolColorArray(  )
flag_align_y = false
spread = 180.0
flatness = 0.0
gravity = Vector2( 0, 0 )
initial_velocity = 1.0
initial_velocity_random = 0.0
angular_velocity = 180.0
angular_velocity_random = 0.0
angular_velocity_curve = null
linear_accel = 0.0
linear_accel_random = 0.0
linear_accel_curve = null
radial_accel = 180.0
radial_accel_random = 0.0
radial_accel_curve = null
tangential_accel = 0.0
tangential_accel_random = 0.0
tangential_accel_curve = null
damping = 0.0
damping_random = 0.0
damping_curve = null
angle = 0.0
angle_random = 0.0
angle_curve = null
scale_amount = 1.0
scale_amount_random = 0.0
scale_amount_curve = null
color = Color( 1, 1, 1, 1 )
color_ramp = null
hue_variation = 0.0
hue_variation_random = 0.0
hue_variation_curve = null
anim_speed = 0.0
anim_speed_random = 0.0
anim_speed_curve = null
anim_offset = 0.0
anim_offset_random = 0.0
anim_offset_curve = null
anim_loop = false

[node name="Center" type="Sprite" parent="Rotatable/Explosion/Main"]
visible = false
modulate = Color( 0.159531, 0.182441, 0.332031, 1 )
material = ExtResource( 9 )
scale = Vector2( 5, 5 )
texture = ExtResource( 10 )

[node name="Center2" type="Sprite" parent="Rotatable/Explosion/Main/Center"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 10 )

[node name="ExplosionAni" type="AnimationPlayer" parent="Rotatable/Explosion"]
root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/explosion = ExtResource( 29 )
blend_times = [  ]

[node name="Light2D" type="Light2D" parent="Rotatable/Explosion"]
enabled = false
editor_only = false
texture = ExtResource( 10 )
offset = Vector2( 0, 0 )
texture_scale = 30.0
color = Color( 1, 1, 1, 1 )
energy = 2.0
mode = 0
range_height = 0.0
range_z_min = -1024
range_z_max = 1024
range_layer_min = 0
range_layer_max = 0
range_item_cull_mask = 1
shadow_enabled = false
shadow_color = Color( 0, 0, 0, 0 )
shadow_buffer_size = 2048
shadow_gradient_length = 0.0
shadow_filter = 0
shadow_filter_smooth = 0.0
shadow_item_cull_mask = 1

[node name="HitEffect" parent="." instance=ExtResource( 30 )]
type = 0
rect_area = Rect2( -60, -20, 120, 60 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/attack_1 = ExtResource( 31 )
anims/attack_2 = ExtResource( 32 )
anims/destroy = ExtResource( 33 )
anims/idle = ExtResource( 34 )
anims/show = ExtResource( 35 )
anims/skill = ExtResource( 36 )
blend_times = [  ]

[node name="Sound" type="Node2D" parent="."]
editor/display_folded = true

[node name="Attack" type="AudioStreamPlayer2D" parent="Sound"]
stream = ExtResource( 37 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
stream_paused = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="Destroy" type="AudioStreamPlayer2D" parent="Sound"]
stream = ExtResource( 38 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
stream_paused = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="Skill" type="AudioStreamPlayer2D" parent="Sound"]
stream = ExtResource( 39 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
stream_paused = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="Hp" parent="." instance=ExtResource( 40 )]
position = Vector2( 0, -70 )

[node name="ResourcePreloader" type="ResourcePreloader" parent="."]
resources = [ PoolStringArray( "bomb_explosion", "bullet" ), [ ExtResource( 41 ), ExtResource( 42 ) ] ]

